# fulltime

./: .gitignore  Anchor.toml  BUILD_PROMPT.md  HACKATHON_INFO.md  PLAN.md  PRD.md  README.md  SESSION_SUMMARY.md  idl.json  package-lock.json  package.json  tsconfig.json
frontend/: .env.example  football.js  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/api/: football-proxy.ts  txline-proxy.ts
frontend/public/: idl.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BlurText.tsx  Button.tsx  FadingVideo.tsx  GlowCard.tsx  LangToggle.tsx  Marquee.tsx  Navbar.tsx  WorldCupBadge.tsx
frontend/src/context/: FullTimeContext.tsx
frontend/src/lib/: football-data.ts  txline.ts
frontend/src/pages/: Admin.tsx  (+9 more)
programs/fulltime/: Cargo.toml
programs/fulltime/src/: lib.rs
relay-service/: .env.example  WORLDCUP_SCHEDULE.md  package-lock.json  package.json
relay-service/idl/: txoracle_devnet.json
relay-service/src/: api-server.ts  check-all-markets.ts  check-game.ts  claim-payout.ts  e2e-demo-spain-belgium.ts  index.ts  manual-settle-spain-vs-belgium.ts  proof-fetcher.ts  research-fixtures.ts  scores-stream.ts  settlement-submitter.ts  settlement-worker.ts  setup-txline.ts  txline-client.ts  txline-poc.ts
tests/: cancel-bulk.ts  cancel-one.ts  check-creator.ts  check-qf.ts  check-status.ts  cleanup-all.ts  create-18-markets.ts  create-proper-markets.ts  create-trustless-markets.ts  e2e-20-markets.ts  e2e-single.ts  e2e-yes-no.ts  fix-markets.ts  fulltime.ts  retry-argentina.ts
(+3 files in other folders)
