[package]
name = "fulltime"
version = "0.1.0"
description = "FullTime — Trustless Prediction Market with Auto-Settlement via TxLINE Merkle Proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fulltime"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
